tests/error/lessThanInteger-bytestring-wrong-1st-argument.uplc
(program 1.0.0[[(builtin lessThanInteger)(con bytestring #AFD3)](con integer 10)])